<resources>
    <string name="app_name">AppLozicConnect</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_user_id">UserId</string>
    <string name="prompt_phone_number">Phone Number (optional)</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign up</string>
    <string name="action_sign_in_short">Sign up</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="text_alert">Alert</string>
    <string name="applozicconnectdemo">Applozic App</string>
    <string name="applozicconnect_label">AppLozicConnect</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="support_phone_number">+918042028425</string>
    <string name="default_server_url">https://applozic.appspot.com</string>
    <string name="application_key">applozic-sample-app</string>
    <string name="support_contact_display_name">AppLozic Support</string>
    <string name="support_contact_userId">applozic.connect</string>
    <string name="support_contact_emailId">applozic.connect@gmail.com</string>
    <string name="support_contact_number">918042028425</string>
    <string name="support_contact_image_url">http://www.mobitexter.net/resources/images/mt_logo_white.png</string>
    <string name="title_activity_app_lozic_coversation">AppLozicCoversationActivity</string>
</resources>
