<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:configChanges="orientation"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/mobicom_activity_horizontal_margin"
    android:paddingRight="@dimen/mobicom_activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.applozic.connect.LoginFragment">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/scrollview_background">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:text="@string/applozicconnect_label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/applozicconnectdemo"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <EditText
                android:id="@+id/userId"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user_id"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dip"
                android:password="false"
                android:singleLine="true"
                android:windowSoftInputMode="adjustResize" />

            <AutoCompleteTextView
                android:id="@+id/email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dip"
                android:password="false"
                android:singleLine="true"
                android:windowSoftInputMode="adjustResize" />

            <EditText
                android:id="@+id/phoneNumber"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone|number"
                android:maxLines="1"
                android:padding="10dip"
                android:singleLine="true"
                android:windowSoftInputMode="adjustResize" />

            <EditText
                android:id="@+id/password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified|actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dip"
                android:phoneNumber="false"
                android:singleLine="true"
                android:windowSoftInputMode="adjustResize" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/email_sign_in_button"
        style="@style/Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:configChanges="orientation"
        android:imeOptions="flagNoExtractUi"
        android:padding="20dip"
        android:text="@string/action_sign_in"
        android:textColor="#ffffff" />


</LinearLayout>
